--- a/src/FileManager/appsettings.json
+++ b/src/FileManager/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "b45fb243-eac7-4f3c-9e9d-c8cd25670865"
   }
 }
